# godauto

./: .gitignore  CLAUDE.md  CLI-METHODOLOGY.md  DECISIONS.md  GODOT-RESEARCH.md  README.md  project.godot  pyproject.toml
.claude/: settings.json
.claude-plugin/: hooks.json  plugin.json
.claude/agents/: gdauto-expert.md
.claude/hooks/: check_auto_godot_output.py
.github/workflows/: claude-fix-issue.yml  claude-review-pr.yml  claude-review.yml  codex-review.yml  nightly-health.yml  pr-ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
autoresearch/: autoresearch-results.tsv  pipeline-results.tsv  pipeline_test.py  results.tsv
prompts/: game-build-loop.md
scenes/: main.tscn
scripts/: main.gd  main.gd.uid
src/auto_godot/: __init__.py  backend.py  cli.py  errors.py  gdscript_docs.py  output.py  sfxr.py
src/gdauto/: __init__.py  backend.py  cli.py  errors.py  output.py
test-output/: feature-matrix.md
tests/e2e/: conftest.py  test_e2e_scene.py  test_e2e_spriteframes.py  test_e2e_tileset.py
tests/fixtures/: aseprite_hash.json  aseprite_no_tags.json  aseprite_pingpong.json  aseprite_simple.json  aseprite_trimmed.json  aseprite_variable_duration.json  expected_tileset.tres  texturepacker_sample.json
tests/unit/: test_animation_commands.py  test_aseprite_parser.py  test_audio_commands.py  test_autoload_commands.py  test_backend.py  test_backend_launch.py  test_cli.py  test_debug_cli.py  test_debug_cli_exec.py  test_debug_cli_phase8.py  test_debug_connect.py  test_display_commands.py  test_dry_run.py  test_execution.py  test_export_commands.py  test_format_compat.py  (+66 more)
tools/: autoresearch.ps1  export_all.ps1  export_sprite.ps1  godot_cli.ps1  setup.ps1
(+156 files in other folders)
